--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -307,6 +307,7 @@ header{
 }
 
 .subscribe{
+    margin-top: 5%;
     width: 100%;
     height: auto;
     background-image: url(../img/Group\ 79.png);
@@ -366,7 +367,7 @@ form a{
 footer{
     width: 100%;
     height: auto;
-    padding: 5% 10%;
+    padding: 0% 10% 2% 10%;
 }
 
 .copy img{
@@ -416,4 +417,341 @@ footer{
     vertical-align: middle;
     margin-top: 2px;
     margin-right: 10px;
+}
+
+@media screen and (max-width : 500px) {
+    header {
+        background-color: #0A8080;
+        bottom: -2%;
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 30px 0%;
+        width: 100%;
+        border-radius: 20px;
+        box-shadow: 20px 10px 50px rgba(0, 0, 0, 0.336);
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .other {
+        display: none;
+    }
+
+    .navlist li {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+    }
+
+    .navlist span {
+        color: white;
+        display: none;
+    }
+
+    .navlist i {
+        display: block;
+        color: white;
+        font-size: 25px;
+        margin-left: 10px;
+    }
+
+    .about {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 100%;
+        height: 50%;
+    }
+
+    .title-sec h1 {
+        width: 100%;
+        font-size: 30px;
+    }
+
+    .supp-img img {
+        width: 100%;
+        height: auto;
+    }
+
+    .subscribe {
+        width: 100%;
+        height: auto;
+        background-image: url(../img/Group\ 79.png);
+        background-position: center;
+        background-size: cover;
+        margin-top: 10%;
+        padding: 6% 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .det {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        gap: 3rem;
+        background-color: white;
+        width: 100%;
+        padding: 2.5%;
+    }
+
+    .titles h1 {
+        font-size: 25px;
+    }
+
+    .titles p {
+        font-size: 10px;
+        color: grey;
+        width: 100%;
+        margin-top: 10px;
+        text-align: center;
+    }
+
+
+    form input {
+        background-color: #D4DAE2;
+        border: none;
+        padding: 15px 30px;
+        width: 100%;
+        border-radius: 10px;
+        color: black;
+        margin-bottom: 20px;
+    }
+
+    .txt3 p {
+        color: grey;
+        font-size: 8px;
+        margin-top: 10px;
+        margin-left: 2px;
+    }
+
+    form a {
+        background-color: #DB4A87;
+        color: white;
+        padding: 10px 20px;
+        justify-content: center;
+        display: flex;
+        align-items: center;
+        margin-right: 20px;
+    }
+
+    .rows {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 2rem;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .who{
+        padding: 5% 5%;
+        width: 100%;
+    }
+    
+    .row{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        width: 100%;
+    }
+    
+    .img img{
+        width: 100%;
+        height: auto;
+    }
+    
+    .who h1{
+        text-align: center;
+        font-size: 30px;
+        margin-top: 5%;
+    }
+    
+    .txt p{
+        width: 100%;
+        line-height: 35px;
+        text-align: center;
+    }
+    
+    .rows{
+        margin-top: 8%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        width: 100%;
+    }
+    
+    .txts h1{
+        font-size: medium;
+        font-weight: 700;
+        width: 100%;
+        text-align: center;
+    }
+    
+    .line1{
+        width: 50%;
+        height: 3px;
+        margin-left: 25%;
+        background-color: #A17857;
+    }
+    
+    .rows-why{
+        padding: 10% 1%;
+    }
+    
+    .column{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+    }
+    
+    .col-1{
+        text-align: center;
+    }
+    
+    .col-1 h1{
+        font-size: 20px;
+        text-align: center;
+        margin-right: 20px;
+    }
+    
+    .col-1 p{
+        color: grey;
+
+        margin-top: 20px;
+        font-size: 12px;
+    }
+    
+    .col-2 img{
+        width: 100%;
+        height: auto;
+    }
+    .checks{
+        margin-top: 20px;
+        width: 100%;
+    }
+    
+    .check-1 i{
+        color: green;
+        font-size: 20px;
+       
+    }
+    
+    .check-1 a {
+        color: black;
+        font-size: small;
+    }
+    
+    .check-1 a i{
+        vertical-align: middle;
+    }
+    
+    .check-2 i{
+        color: green;
+        font-size: 20px;
+    }
+    
+    .check-2{
+        margin-top: 10px;
+    }
+    
+    .check-2 a {
+        color: black;
+        font-size: small;
+    }
+    
+    .check-2 a i{
+        vertical-align: middle;
+    }
+    
+    
+    .explore{
+        color: #3183FF;
+        font-weight: 600;
+        display: inline-flex;
+        margin-top: 50px;
+    }
+    
+    .explore i{
+        color: #3183FF;
+        font-size: 27px;
+        
+    }
+    
+    .founder{
+        padding: 0 1%;
+    }
+    
+    .rowss{
+        display: flex;
+        justify-content: center;
+        flex-direction: column-reverse;
+        align-items: center;
+        text-align: center;
+        gap: 1rem;
+    }
+    
+    .img img{
+        width: 70%;
+        height: auto;
+    }
+    
+    
+    .detailss p{
+        font-size: 25px;
+        color: grey;
+        margin-bottom: 50px;
+    }
+    
+    .detailss .p1{
+        color: grey;
+        font-size: 11px;
+        
+    }
+    
+
+
+
+
+
+
+
+    footer{
+        width: 100%;
+        height: auto;
+        padding: 5% 10%;
+    }
+    
+    .copy img{
+        margin-right: 15px;
+        width: 25px;
+        height: auto;
+    }
+    
+    .rows{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        gap: 2rem;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    
+    
+
 }
