--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -147,6 +147,15 @@ form input:first-child{
     border-radius: 15px;
 }
 
+form input[type = "email"]{
+    background-color: white;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+    border: none;
+    width: 60%;
+    padding: 15px;
+    border-radius: 15px;
+}
+
 
 form input[type = "password"]{
     background-color: white;
@@ -189,6 +198,176 @@ form a span{
     vertical-align: middle;
     color: black;
     font-weight: bold;
+}
+
+.reg{
+    display: flex;
+    margin-top: 50px;
+}
+.reg h1{
+    color: grey;
+    font-size: 13px;
+    margin-right: 10px;
+}
+
+.reg a{
+    vertical-align: middle;
+    font-size: 13px;
+    color: rgb(0, 102, 255);
+}
+
+
+@media screen and (max-width : 500px) {
+    header {
+        background-color: #0A8080;
+        bottom: -2%;
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 30px 0%;
+        width: 100%;
+        border-radius: 20px;
+        box-shadow: 20px 10px 50px rgba(0, 0, 0, 0.336);
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .other {
+        display: none;
+    }
+
+    .navlist li {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+    }
+
+    .navlist span {
+        color: white;
+        display: none;
+    }
+
+    .navlist i {
+        display: block;
+        color: white;
+        font-size: 25px;
+        margin-left: 10px;
+    }
+    
+    .log{
+        width: 100%;
+        height: 80vh;
+    }
+    .det{
+        display: none;
+    }
+    
+    .log{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .log h1{
+        font-size: 30px;
+    }
+    .log p{
+        color: grey;
+    }
+    
+    form{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-top: 80px;
+        width: 100%;
+    }
+    
+    form input:first-child{
+        background-color: white;
+        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+        border: none;
+        width: 90%;
+        padding: 15px;
+        border-radius: 15px;
+    }
+
+    form input[type = "email"]{
+        background-color: white;
+        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+        border: none;
+        width: 90%;
+        padding: 15px;
+        border-radius: 15px;
+    }
+    
+    
+    form input[type = "password"]{
+        background-color: white;
+        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+        border: none;
+        width: 90%;
+        padding: 15px;
+        border-radius: 15px;
+    }
+    
+    form button{
+        color: white;
+        font-weight: bold;
+        letter-spacing: 2px;
+        background-color: #0A8080;
+        border: none;
+        width: 70%;
+        margin-top: 50px;
+        height: 50px;
+        border-radius: 15px;
+        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+    }
+    
+    form a{
+        background-color: white;
+        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+        border-radius: 15px;
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    form a img{
+        width: 30px;
+        height: 30px;
+        margin-right: 20px;
+    }
+    
+    form a span{
+        vertical-align: middle;
+        color: black;
+        font-weight: bold;
+    }
+
+    .reg{
+        display: flex;
+        margin-top: 50px;
+    }
+    .reg h1{
+        color: grey;
+        font-size: 13px;
+        margin-right: 10px;
+    }
+    
+    .reg a{
+        vertical-align: middle;
+        font-size: 13px;
+        color: rgb(0, 102, 255);
+    }
+
 }
 
 
