--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,8 +190,8 @@ header {
 .quot img {
     position: relative;
     right: 20%;
-    width: 32px;
-    height: 32px;
+    width: 50px;
+    height: 43px;
 }
 
 .quot p {
@@ -639,6 +639,14 @@ footer {
 .det-foot li img {
     width: 20px;
     height: 20px;
+    vertical-align: middle;
+    margin-top: 2px;
+    margin-right: 10px;
+}
+
+.det-foot .tweet{
+    width: 20px;
+    height: 17px;
     vertical-align: middle;
     margin-top: 2px;
     margin-right: 10px;
