--- a/assets/css/details.css
+++ b/assets/css/details.css
@@ -110,7 +110,7 @@ header{
 }
 
 .title-sec p{
-    color: grey;
+    color: black;
     margin: 15px;
 }
 
@@ -235,7 +235,7 @@ header{
 }
 .titles p{
     font-size: 10px;
-    color: grey;
+    color: black;
     width: 70%;
     margin-top: 10px;
 }
@@ -250,7 +250,7 @@ form input{
     color: black;
 }
 .txt3 p{
-    color: grey;
+    color: black;
     font-size: 8px;
     margin-top: 10px;
     margin-left: 2px;
@@ -293,7 +293,7 @@ footer{
 }
 
 .copy p{
-    color: grey;
+    color: black;
     font-size: small;
 }
 
@@ -305,7 +305,7 @@ footer{
 }
 
 .det-foot a{
-    color: grey;
+    color: black;
     margin-bottom: 10px;
     display: inline-flex;
 }
@@ -437,7 +437,7 @@ footer{
     
     .details1 p{
         line-height: 25px;
-        color: grey;
+        color: black;
         text-align: center;
     }
 
@@ -472,7 +472,7 @@ footer{
 
     .titles p {
         font-size: 10px;
-        color: grey;
+        color: black;
         width: 100%;
         margin-top: 10px;
         text-align: center;
@@ -490,7 +490,7 @@ footer{
     }
 
     .txt3 p {
-        color: grey;
+        color: black;
         font-size: 8px;
         margin-top: 10px;
         margin-left: 2px;
@@ -592,7 +592,7 @@ footer{
     }
     
     .col-1 p{
-        color: grey;
+        color: black;
 
         margin-top: 20px;
         font-size: 12px;
@@ -675,12 +675,12 @@ footer{
     
     .detailss p{
         font-size: 25px;
-        color: grey;
+        color: black;
         margin-bottom: 50px;
     }
     
     .detailss .p1{
-        color: grey;
+        color: black;
         font-size: 11px;
         
     }
