--- a/assets/css/advertise.css
+++ b/assets/css/advertise.css
@@ -113,7 +113,7 @@ header{
 }
 
 .title-sec p{
-    color: grey;
+    color: black;
     margin: 15px 0;
 }
 
@@ -298,7 +298,7 @@ header{
 }
 .details-col p{
     font-size: small;
-    color: grey;
+    color: black;
     margin-bottom: 10px;
 }
 
@@ -343,7 +343,7 @@ header{
 }
 .titles p{
     font-size: 10px;
-    color: grey;
+    color: black;
     width: 70%;
     margin-top: 10px;
 }
@@ -358,7 +358,7 @@ form input{
     color: black;
 }
 .txt3 p{
-    color: grey;
+    color: black;
     font-size: 8px;
     margin-top: 10px;
     margin-left: 2px;
@@ -401,7 +401,7 @@ footer{
 }
 
 .copy p{
-    color: grey;
+    color: black;
     font-size: small;
 }
 
@@ -413,7 +413,7 @@ footer{
 }
 
 .det-foot a{
-    color: grey;
+    color: black;
     margin-bottom: 10px;
     display: inline-flex;
 }
@@ -585,7 +585,7 @@ footer{
     }
     .details-col p{
         font-size: small;
-        color: grey;
+        color: black;
         margin-bottom: 10px;
     }
     
@@ -631,7 +631,7 @@ footer{
 
     .titles p {
         font-size: 10px;
-        color: grey;
+        color: black;
         width: 100%;
         margin-top: 10px;
         text-align: center;
@@ -649,7 +649,7 @@ footer{
     }
 
     .txt3 p {
-        color: grey;
+        color: black;
         font-size: 8px;
         margin-top: 10px;
         margin-left: 2px;
