--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -125,7 +125,7 @@ header {
     font-size: 30px;
 }
 .log p{
-    color: grey;
+    color: black;
 }
 
 form{
@@ -205,7 +205,7 @@ form a span{
     margin-top: 50px;
 }
 .reg h1{
-    color: grey;
+    color: black;
     font-size: 13px;
     margin-right: 10px;
 }
@@ -277,7 +277,7 @@ form a span{
         font-size: 30px;
     }
     .log p{
-        color: grey;
+        color: black;
     }
     
     form{
@@ -357,7 +357,7 @@ form a span{
         margin-top: 50px;
     }
     .reg h1{
-        color: grey;
+        color: black;
         font-size: 13px;
         margin-right: 10px;
     }
