--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ header {
 }
 
 .title-sec p {
-    color: grey;
+    color: black;
     margin: 15px;
 }
 
@@ -144,7 +144,7 @@ header {
 
 .cards p {
     font-size: 10px;
-    color: gray;
+    color: black;
     margin-top: 15px;
 }
 
@@ -203,7 +203,7 @@ header {
 }
 
 .quot .p2 {
-    color: grey;
+    color: black;
     bottom: 30%;
     font-size: 10px;
 }
@@ -351,7 +351,7 @@ header {
     }
 
     .quot .p2 {
-        color: grey;
+        color: black;
         bottom: 25%;
         font-size: 5px;
         margin-bottom: 20px;
@@ -402,7 +402,7 @@ header {
 
 .details-col p {
     font-size: small;
-    color: grey;
+    color: black;
     margin-bottom: 10px;
 }
 
@@ -560,7 +560,7 @@ header {
 
 .titles p {
     font-size: 10px;
-    color: grey;
+    color: black;
     width: 70%;
     margin-top: 10px;
 }
@@ -576,7 +576,7 @@ form input {
 }
 
 .txt3 p {
-    color: grey;
+    color: black;
     font-size: 8px;
     margin-top: 10px;
     margin-left: 2px;
@@ -619,7 +619,7 @@ footer {
 }
 
 .copy p {
-    color: grey;
+    color: black;
     font-size: small;
 }
 
@@ -631,7 +631,7 @@ footer {
 }
 
 .det-foot a {
-    color: grey;
+    color: black;
     margin-bottom: 10px;
     display: inline-flex;
 }
@@ -742,7 +742,7 @@ footer {
 
     .titles p {
         font-size: 10px;
-        color: grey;
+        color: black;
         width: 100%;
         margin-top: 10px;
         text-align: center;
@@ -760,7 +760,7 @@ footer {
     }
 
     .txt3 p {
-        color: grey;
+        color: black;
         font-size: 8px;
         margin-top: 10px;
         margin-left: 2px;
