--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -583,7 +583,7 @@ form input {
 }
 
 form a {
-    background-color: #DB4A87;
+    background-color: #810539;
     color: white;
     padding: 10px 20px;
     margin-left: 10px;
