--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -70,6 +70,9 @@ header{
     letter-spacing: 2px;
     transition: all .4s ease;
 }
+li .active{
+    color: #0A8080;
+}
 
 .navlist a:hover{
     color: #0A8080;
