--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -70,11 +70,11 @@ header {
     transition: all .4s ease;
 }
 
-.navlist a:hover{
+.navlist a:hover {
     color: #0A8080;
 }
 
-.navlist a::after{
+.navlist a::after {
     position: absolute;
     background-color: #0A8080;
     content: '';
@@ -85,10 +85,9 @@ header {
     transition: all .4s ease;
 }
 
-.navlist a:hover::after{
+.navlist a:hover::after {
     width: 70%;
 }
-
 
 .navlist i {
     display: none;
@@ -98,7 +97,7 @@ header {
 }
 
 .btn {
-    color: black;
+    color: #0A8080;
     letter-spacing: 2px;
     margin-right: 20px;
 }
@@ -113,22 +112,23 @@ header {
     right: 14%;
 }
 
-.row{
+.row {
     display: flex;
 }
 
-.log{
+.log {
     width: 100%;
     height: 100vh;
 }
-.det{
+
+.det {
     width: 100%;
     height: 100vh;
     background-color: antiquewhite;
     position: relative;
 }
 
-.det img{
+.det img {
     width: 50%;
     height: auto;
     position: absolute;
@@ -136,72 +136,96 @@ header {
     left: 20%;
 }
 
-.log{
+.log {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.log h1{
+.log h1 {
     font-size: 30px;
 }
-.log p{
+
+.log p {
     color: black;
 }
 
 form{
+    margin-top: 50px;
+}
+
+.form {
+    margin:20px 0; 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-    margin-top: 80px;
-    width: 80%;
+    position:relative;
 }
 
-form input:first-child{
-    background-color: white;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
-    border: none;
-    width: 60%;
-    padding: 15px;
+
+.form input {
+    display:block;
+    width:120%;
+    padding:15px;
     border-radius: 15px;
-}
-
-form input[type = "email"]{
-    background-color: white;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
     border: none;
-    width: 60%;
-    padding: 15px;
-    border-radius: 15px;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
+}
+
+.error input {
+    border:3px red solid;
+}
+
+.success input {
+    border:3px green solid;
+}
+
+ .form i {
+    font-size: 20px;
+     position:absolute;
+     right:5px;
+     top:15px;
+     visibility: hidden;
+ }
+
+
+ .success i.bxs-check-circle{
+     visibility: visible;
+     color:green;
+ }
+
+ .error i.bxs-info-circle {
+    visibility: visible;
+    color:red;
 }
 
 
-form input[type = "password"]{
-    background-color: white;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
-    border: none;
-    width: 60%;
-    padding: 15px;
-    border-radius: 15px;
-}
+ .form p {
+     font-size: 15px;
+     color:red;
+     visibility: hidden;
+     float: left;
+     width: 110%;
+ }
 
-form button{
-    color: white;
-    font-weight: bold;
-    letter-spacing: 2px;
-    background-color: #0A8080;
-    border: none;
-    width: 40%;
-    margin-top: 50px;
-    height: 50px;
-    border-radius: 15px;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
-}
+ .error p {
+     visibility: visible;
+ }
 
-form a{
+ .sub {
+     width:100%;
+     padding:15px;
+     font-size: 15px;
+     background-color: #02073E;
+     color:#fff;
+     font-weight: bold;
+     border:none;
+     border-radius: 20px;
+ }
+
+form a {
     background-color: white;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
@@ -209,38 +233,70 @@ form a{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
 }
-form a img{
+
+form a img {
     width: 30px;
     height: 30px;
     margin-right: 20px;
 }
 
-form a span{
+form a span {
     vertical-align: middle;
     color: black;
     font-weight: bold;
 }
 
-.reg{
+form .err{
+    font-size: 12px;
+    color: red;
+    text-align: start;
+    width: 55%;
+    visibility: hidden;
+
+}
+.error .err {
+    visibility: visible;
+}
+
+.reg {
     display: flex;
     margin-top: 50px;
 }
-.reg h1{
+
+.reg h1 {
     color: black;
     font-size: 13px;
     margin-right: 10px;
 }
 
-.reg a{
+.reg a {
     vertical-align: middle;
     font-size: 13px;
     color: rgb(0, 102, 255);
 }
 
+.mob{
+    display: none;
+}
+
 
 @media screen and (max-width : 500px) {
-    header {
+
+    body {
+        background-color: #e6d8cc;
+    }
+
+    .main{
+        display: none;
+    }
+
+    .mob{
+        display: block;
+    }
+
+    /* header {
         background-color: #0A8080;
         bottom: -2%;
         position: fixed;
@@ -251,6 +307,7 @@ form a span{
         width: 100%;
         border-radius: 20px;
         box-shadow: 20px 10px 50px rgba(0, 0, 0, 0.336);
+        display: none
     }
 
     .logo {
@@ -279,117 +336,126 @@ form a span{
         font-size: 25px;
         margin-left: 10px;
     }
-    
-    .log{
+
+    .log {
         width: 100%;
-        height: 80vh;
+        height: 100vh;
     }
-    .det{
+
+    .det {
         display: none;
     }
-    
-    .log{
+
+    .log {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
-    
-    .log h1{
+
+    .log h1 {
         font-size: 30px;
+        text-align: start;
     }
-    .log p{
+
+    .log p {
         color: black;
     }
-    
-    form{
+
+    form {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         gap: 20px;
-        margin-top: 80px;
+        margin-top: 20px;
         width: 100%;
     }
-    
-    form input:first-child{
+
+    form input:first-child {
         background-color: white;
         box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
         border: none;
         width: 90%;
-        padding: 15px;
+        padding: 20px;
         border-radius: 15px;
     }
 
-    form input[type = "email"]{
+    form input[type="email"] {
         background-color: white;
         box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
         border: none;
         width: 90%;
-        padding: 15px;
+        padding: 20px;
         border-radius: 15px;
     }
-    
-    
-    form input[type = "password"]{
+
+
+    form input[type="password"] {
         background-color: white;
         box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
         border: none;
         width: 90%;
-        padding: 15px;
+        padding: 20px;
         border-radius: 15px;
     }
-    
-    form button{
+
+    form button {
         color: white;
         font-weight: bold;
         letter-spacing: 2px;
-        background-color: #0A8080;
+        background-color: #0F2137;
         border: none;
         width: 70%;
         margin-top: 50px;
-        height: 50px;
+        height: 60px;
         border-radius: 15px;
         box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
     }
-    
-    form a{
+
+    form a {
         background-color: white;
         box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
         border-radius: 15px;
-        padding: 10px;
+        padding: 15px;
         display: flex;
         justify-content: center;
         align-items: center;
     }
-    form a img{
+
+    form a img {
         width: 30px;
         height: 30px;
         margin-right: 20px;
     }
-    
-    form a span{
+
+    form a span {
         vertical-align: middle;
         color: black;
         font-weight: bold;
     }
 
-    .reg{
+    .reg {
         display: flex;
         margin-top: 50px;
     }
-    .reg h1{
+
+    .reg h1 {
         color: black;
         font-size: 13px;
         margin-right: 10px;
     }
-    
-    .reg a{
+
+    .reg a {
         vertical-align: middle;
         font-size: 13px;
         color: rgb(0, 102, 255);
     }
 
+    .log .img{
+        margin-top: 20px;
+        width: 30%;
+        height: auto;
+    } */
+
 }
-
-
