--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ header {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: 30px 14%;
+    padding: 20px 14%;
     background-color: var(--bg-color);
     transition: all .4s ease;
     z-index: 1000;
@@ -178,7 +178,8 @@ header {
 
 .row {
     margin-top: 8%;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(400px , 1fr));
     justify-content: center;
     align-items: center;
     gap: 3rem;
@@ -261,266 +262,28 @@ header {
     height: auto;
 }
 
-@media screen and (max-width : 830px) {
-
-    header {
-        background-color: #0A8080;
-        bottom: -2%;
-        position: fixed;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 30px 0%;
-        width: 100%;
-        border-radius: 20px;
-        box-shadow: 20px 10px 50px rgba(0, 0, 0, 0.336);
-    }
-
-    .logo {
-        display: none;
-    }
-
-    .other {
-        display: none;
-    }
-
-    .navlist li {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        text-align: center;
-    }
-
-    .navlist span {
-        color: white;
-        display: none;
-    }
-
-    .navlist i {
-        display: block;
-        color: white;
-        font-size: 40px;
-        margin-left: 30px;
-    }
-
-
-    .home{
-        padding: 15% 0%;
-    }
-
-    .cards {
-        background-color: #FFF5ED;
-        position: absolute;
-        top: 55%;
-        padding: 8% 14%;
-    }
-
-    .cards h1 {
-        font-size: 20px;
-    }
-
-    .row {
-        padding: 0 14%;
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 50px;
-        margin-bottom: 60px;
-    }
-
-    .quot {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 1%;
-    }
-
-    .quot img {
-        position: relative;
-        right: 32%;
-        width: 25px;
-        height: 25px;
-    }
-
-    .quot p {
-        position: absolute;
-        width: 50%;
-        font-size: 15px;
-        bottom: 37%;
-        text-align: start;
-    }
-
-    .quot .p2 {
-        color: black;
-        bottom: 34%;
-        font-size: 5px;
-        margin-bottom: 20px;
-    }
-
-    .supp {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 3rem;
-        margin-top: 50px;
-    }
-
-    .supp img {
-        width: 80px;
-        height: auto;
-    }
-
+li .active{
+    color: #0A8080;
 }
 
-@media screen and (max-width : 500px) {
-    header {
-        background-color: #0A8080;
-        bottom: -2%;
-        position: fixed;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 30px 0%;
-        width: 100%;
-        border-radius: 20px;
-        box-shadow: 20px 10px 50px rgba(0, 0, 0, 0.336);
-    }
 
-    .logo {
-        display: none;
-    }
 
-    .other {
-        display: none;
-    }
-
-    .navlist li {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        text-align: center;
-    }
-
-    .navlist span {
-        color: white;
-        display: none;
-    }
-
-    .navlist i {
-        display: block;
-        color: white;
-        font-size: 25px;
-        margin-left: 10px;
-    }
-
-    .home {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 10% 14%;
-        text-align: center;
-    }
-
-    .title-sec h1 {
-        width: 100%;
-        font-size: 20px;
-    }
-
-    .home-img img {
-        width: 100%;
-        height: auto;
-    }
-
-    .cards {
-        width: 100%;
-        height: 100%;
-        background-color: #FFF5ED;
-        position: absolute;
-        top: 45%;
-        padding: 8% 14%;
-    }
-
-    .cards h1 {
-        font-size: 20px;
-    }
-
-    .row {
-        padding: 0 14%;
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 50px;
-        margin-bottom: 60px;
-    }
-
-    .rows-1 img {
-        width: 70px;
-        height: 70px;
-    }
-
-    .details h1 {
-        font-size: 10px;
-    }
-
-    .details p {
-        width: 100%;
-        font-size: 10px;
-    }
-
-    .quot {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 1%;
-    }
-
-    .quot img {
-        position: relative;
-        right: 32%;
-        width: 25px;
-        height: 25px;
-    }
-
-    .quot p {
-        position: absolute;
-        width: 50%;
-        font-size: 8px;
-        bottom: 29%;
-        text-align: start;
-    }
-
-    .quot .p2 {
-        color: black;
-        bottom: 25%;
-        font-size: 5px;
-        margin-bottom: 20px;
-    }
-
-    .supp {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 3rem;
-        margin-top: 50px;
-    }
-
-    .supp img {
-        width: 80px;
-        height: auto;
-    }
-}
 
 .team {
-    padding: 45% 14%;
+    padding: 45% 12%;
     justify-content: center;
     text-align: center;
     width: 100%;
     height: 100vh;
 }
 
-.container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    margin-top: 10%;
-    gap: 3rem;
+
+.swiper{
+    margin-top: 9rem;
+    padding: 0 10%;
 }
+
+
 
 .col img {
     background-color: #FFFAF6;
@@ -528,8 +291,14 @@ header {
     align-items: center;
 }
 
+
+
 .details-col {
     text-align: start;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .details-col h1 {
@@ -543,6 +312,12 @@ header {
     margin-bottom: 10px;
 }
 
+.swiper-button-prev,
+.swiper-button-next{
+    color: black;
+
+}
+
 .icons {
     display: flex;
     gap: 1rem;
@@ -553,84 +328,10 @@ header {
     font-size: medium;
 }
 
-.icon-s {
-    background-color: white;
-    width: 50px;
-    height: 50px;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    border-radius: 50%;
-    position: absolute;
-    right: 30%;
-    bottom: -135%;
-    box-shadow: 10px 5px 20px rgba(0, 0, 0, 0.192);
-}
 
-.icon-s i {
-    color: black;
-}
 
-.col-final {
-    filter: contrast(50%)
-}
 
-@media screen and (max-width : 830px) {
 
-    .team {
-        padding: 140% 14%;
-        justify-content: center;
-        text-align: center;
-    }
-
-    .team p {
-        font-size: 8px;
-    }
-
-    .container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 3rem;
-        margin-top: 20%;
-    }
-
-    .col-final {
-        filter: contrast(100%)
-    }
-
-    .icon-s {
-        display: none;
-    }
-    
-}
-
-@media screen and (max-width : 500px) {
-    .team {
-        padding: 220% 14%;
-        justify-content: center;
-        text-align: center;
-    }
-
-    .team p {
-        font-size: 8px;
-    }
-
-    .container {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 2rem;
-        margin-top: 20%;
-    }
-
-    .col-final {
-        filter: contrast(100%)
-    }
-
-    .icon-s {
-        display: none;
-    }
-
-}
 
 .blog .title-sec {
     margin-top: 12%;
@@ -638,7 +339,7 @@ header {
 
 .col__blog {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill , minmax(400px , 1fr));
     gap: 3rem;
     align-items: center;
     justify-content: center;
@@ -818,271 +519,61 @@ footer {
     margin-right: 10px;
 }
 
-@media screen and (max-width : 830px) {
 
-    .blog .title-sec {
-        margin-top: 10%;
-    }
-
-    .col__blog {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 1rem;
-        align-items: center;
-        justify-content: center;
-        text-align: start;
-        margin-top: 10%;
-    }
-
-    .col-blog h1 {
-        font-size: medium;
-        text-align: start;
-        width: 90%;
-    }
-
-    .col-blog p {
-        font-size: small;
-        width: 70%;
-        margin-top: 15px;
-        color: gray;
-    }
-
-    .col-blog .txt {
-        background-color: #FFF5ED;
-        padding: 30px;
-        margin-bottom: 20px;
-        width: 100%;
-    }
-
-    .col-blog .txt h1 {
-        width: 100%;
-
-    }
-
-    .col-blog .image img {
-        position: relative;
-        margin-bottom: 20px;
-        width: 100%;
-        height: auto;
-    }
-
-    .col-blog .image .txt1 {
-        display: none;
-    }
-
-    .col-blog .image .txt2 {
-        display: none;
-    }
+.mob{
+    display: none;
 }
 
 @media screen and (max-width : 500px) {
 
-    .blog .title-sec {
-        margin-top: 10%;
+
+    header {
+        display: none;
     }
+    
+    .main{
 
-    .col__blog {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 1rem;
-        align-items: center;
-        justify-content: center;
-        text-align: start;
-        margin-top: 10%;
-    }
-
-    .col-blog h1 {
-        font-size: medium;
-        text-align: start;
-        width: 90%;
-    }
-
-    .col-blog p {
-        font-size: small;
-        width: 70%;
-        margin-top: 15px;
-        color: gray;
-    }
-
-    .col-blog .txt {
-        background-color: #FFF5ED;
-        padding: 30px;
-        margin-bottom: 20px;
-        width: 100%;
-    }
-
-    .col-blog .txt h1 {
-        width: 100%;
-
-    }
-
-    .col-blog .image img {
-        position: relative;
-        margin-bottom: 20px;
-        width: 100%;
-        height: 80%;
-    }
-
-    .col-blog .image .txt1 {
         display: none;
     }
 
-    .col-blog .image .txt2 {
-        display: none;
+    .mob{
+        display: block;
+        background-color: #e6d8cc;
+        width: 100%;
+        height: 100vh;
+        gap: 3rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
     }
-}
 
-@media screen and (max-width : 830px) {
-
-    .subscribe {
+    .mob_img img{
+        margin-top: 2rem;
         width: 100%;
         height: auto;
-        background-image: url(../img/Group\ 79.png);
-        background-position: center;
-        background-size: cover;
-        margin-top: 170%;
-        padding: 6% 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
     }
 
-    .det {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        gap: 3rem;
-        background-color: white;
-        width: 100%;
-        padding: 2.5%;
+    .mob_title h1{
+        color: rgb(3, 7, 26);
     }
 
-    .titles h1 {
-        font-size: 25px;
+    .mob_title p{
+        font-size: 15px;
+        color: rgb(54, 54, 54);
+        margin-bottom: 50px;
+    }
+    
+    .mob_title p span{
+        font-size: 20px;
     }
 
-    .titles p {
-        font-size: 10px;
-        color: black;
-        width: 100%;
-        margin-top: 10px;
-        text-align: center;
-    }
-
-
-    form input {
-        background-color: #D4DAE2;
-        border: none;
-        padding: 15px 30px;
-        width: 80%;
-        border-radius: 10px;
-        color: black;
-        margin-bottom: 20px;
-    }
-
-    .txt3 p {
-        color: black;
-        font-size: 8px;
-        margin-top: 10px;
-        margin-left: 2px;
-    }
-
-    form a {
-        background-color: #DB4A87;
+    .mob_title a{
         color: white;
-        padding: 10px 20px;
-        justify-content: center;
-        display: flex;
-        align-items: center;
-        margin-right: 8rem;
-        margin-left: 8rem;
+        background-color: #0F2137;
+        padding: 12px 50px;
+        border-radius: 15px;
     }
-
-    .rows {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 2rem;
-        justify-content: center;
-        align-items: center;
-    }
-
 }
 
-@media screen and (max-width : 500px) {
 
-    .subscribe {
-        width: 100%;
-        height: auto;
-        background-image: url(../img/Group\ 79.png);
-        background-position: center;
-        background-size: cover;
-        margin-top: 680%;
-        padding: 6% 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .det {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        gap: 3rem;
-        background-color: white;
-        width: 100%;
-        padding: 2.5%;
-    }
-
-    .titles h1 {
-        font-size: 25px;
-    }
-
-    .titles p {
-        font-size: 10px;
-        color: black;
-        width: 100%;
-        margin-top: 10px;
-        text-align: center;
-    }
-
-
-    form input {
-        background-color: #D4DAE2;
-        border: none;
-        padding: 15px 30px;
-        width: 100%;
-        border-radius: 10px;
-        color: black;
-        margin-bottom: 20px;
-    }
-
-    .txt3 p {
-        color: black;
-        font-size: 8px;
-        margin-top: 10px;
-        margin-left: 2px;
-    }
-
-    form a {
-        background-color: #DB4A87;
-        color: white;
-        padding: 10px 20px;
-        justify-content: center;
-        display: flex;
-        align-items: center;
-        margin-right: 20px;
-    }
-
-    .rows {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        gap: 2rem;
-        justify-content: center;
-        align-items: center;
-    }
-
-}
